--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.85MB/s(Youtube:不良林), server: 85.208.108.94, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-306.7KB/s(Youtube:不良林), server: 85.208.108.94, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇯🇵 日本-2.49MB/s(Youtube:不良林), server: 85.208.108.94, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇯🇵 日本-3.55MB/s(Youtube:不良林), server: 85.208.108.94, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-3.09MB/s(Youtube:不良林), server: 85.208.108.94, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇯🇵 日本-3.41MB/s(Youtube:不良林), server: 85.208.108.94, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 塞浦路斯-439.8KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇫🇷 法国-882.3KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-462.5KB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.21MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-1.78MB/s(Youtube:不良林), server: 85.208.108.94, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-2.91MB/s(Youtube:不良林), server: 85.208.108.94, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-1.02MB/s(Youtube:不良林), server: 85.208.108.94, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-3.57MB/s(Youtube:不良林), server: 85.208.108.94, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇦🇺 澳大利亚-945.5KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 未知国家-440.2KB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
+  - {name: 🇻🇳 越南-338.1KB/s(Youtube:不良林), server: hcmn4.sos4g.xyz, port: 80, type: vmess, uuid: 88feb3a4-8dd9-4001-91d6-9cceabca5a4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /sos4g.xyz, ws-headers: {Host: hcmn4.sos4g.xyz}}
+  - {name: 🇯🇵 日本-3.08MB/s(Youtube:不良林), server: 85.208.108.94, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-2.93MB/s(Youtube:不良林), server: 85.208.108.94, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
-      - 塞浦路斯-439.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-882.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-462.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-945.5KB/s(Youtube:不良林)
+      - 未知国家-440.2KB/s(Youtube:不良林)
+      - 🇻🇳 越南-338.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
-      - 塞浦路斯-439.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-882.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-462.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-945.5KB/s(Youtube:不良林)
+      - 未知国家-440.2KB/s(Youtube:不良林)
+      - 🇻🇳 越南-338.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
-      - 塞浦路斯-439.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-882.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-462.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-945.5KB/s(Youtube:不良林)
+      - 未知国家-440.2KB/s(Youtube:不良林)
+      - 🇻🇳 越南-338.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
-      - 塞浦路斯-439.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-882.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-462.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-945.5KB/s(Youtube:不良林)
+      - 未知国家-440.2KB/s(Youtube:不良林)
+      - 🇻🇳 越南-338.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
-      - 塞浦路斯-439.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-882.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-462.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-945.5KB/s(Youtube:不良林)
+      - 未知国家-440.2KB/s(Youtube:不良林)
+      - 🇻🇳 越南-338.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
-      - 塞浦路斯-439.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-882.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-462.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-945.5KB/s(Youtube:不良林)
+      - 未知国家-440.2KB/s(Youtube:不良林)
+      - 🇻🇳 越南-338.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
-      - 塞浦路斯-439.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-882.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-462.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-945.5KB/s(Youtube:不良林)
+      - 未知国家-440.2KB/s(Youtube:不良林)
+      - 🇻🇳 越南-338.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
