--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-396.5KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-954.4KB/s(Youtube:不良林), server: 85.208.108.94, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇯🇵 日本-2.50MB/s(Youtube:不良林), server: 85.208.108.94, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-1.02MB/s(Youtube:不良林), server: 85.208.108.94, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇭🇰 香港-2.21MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇻🇳 越南-338.1KB/s(Youtube:不良林), server: hcmn4.sos4g.xyz, port: 80, type: vmess, uuid: 88feb3a4-8dd9-4001-91d6-9cceabca5a4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /sos4g.xyz, ws-headers: {Host: hcmn4.sos4g.xyz}}
-  - {name: 🇯🇵 日本-3.08MB/s(Youtube:不良林), server: 85.208.108.94, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-2.93MB/s(Youtube:不良林), server: 85.208.108.94, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-1.51MB/s(Youtube:不良林), server: 85.208.108.94, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-1.17MB/s(Youtube:不良林), server: 85.208.108.94, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-1.50MB/s(Youtube:不良林), server: 85.208.108.94, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇯🇵 日本-204.5KB/s(Youtube:不良林), server: 85.208.108.94, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-155.3KB/s(Youtube:不良林), server: 85.208.108.94, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
   - {name: 🇯🇵 日本-2.39MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.49MB/s(Youtube:不良林), server: 85.208.108.94, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-1.53MB/s(Youtube:不良林), server: 85.208.108.94, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇸🇬 新加坡-376.0KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-396.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-954.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.21MB/s(Youtube:不良林)
-      - 🇻🇳 越南-338.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-204.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-155.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-376.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-396.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-954.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.21MB/s(Youtube:不良林)
-      - 🇻🇳 越南-338.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-204.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-155.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-376.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-396.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-954.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.21MB/s(Youtube:不良林)
-      - 🇻🇳 越南-338.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-204.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-155.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-376.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.21MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-396.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-954.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.21MB/s(Youtube:不良林)
-      - 🇻🇳 越南-338.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-204.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-155.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-376.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-396.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-954.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.21MB/s(Youtube:不良林)
-      - 🇻🇳 越南-338.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-204.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-155.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-376.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-396.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-954.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.21MB/s(Youtube:不良林)
-      - 🇻🇳 越南-338.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-204.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-155.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-376.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-396.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-954.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.02MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.21MB/s(Youtube:不良林)
-      - 🇻🇳 越南-338.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-204.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-155.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-376.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
