--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-2.70MB/s(Youtube:不良林), server: 85.208.108.94, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇯🇵 日本-1.51MB/s(Youtube:不良林), server: 85.208.108.94, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-1.17MB/s(Youtube:不良林), server: 85.208.108.94, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-1.50MB/s(Youtube:不良林), server: 85.208.108.94, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇯🇵 日本-204.5KB/s(Youtube:不良林), server: 85.208.108.94, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-155.3KB/s(Youtube:不良林), server: 85.208.108.94, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.39MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.49MB/s(Youtube:不良林), server: 85.208.108.94, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-396.5KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-235.9KB/s(Youtube:不良林), server: 85.208.108.94, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇯🇵 日本-1.53MB/s(Youtube:不良林), server: 85.208.108.94, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇸🇬 新加坡-376.0KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
+  - {name: 🇺🇸 美国-1.79MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-745.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-204.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-155.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-396.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-235.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-376.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-745.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-204.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-155.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-396.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-235.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-376.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-745.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-204.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-155.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-396.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-235.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-376.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-745.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-204.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-155.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-396.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-235.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-376.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-745.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-204.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-155.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-396.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-235.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-376.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-745.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-204.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-155.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-396.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-235.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-376.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-745.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-204.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-155.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-396.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-235.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-376.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-745.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
